crates/llvmkit-ir/tests/compile_fail/set_struct_body_twice.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/set_struct_body_twice.rs:20:35
   |
20 |         let _ = m.set_struct_body(body_set, [i32_ty.as_type()], false);
   |                   --------------- ^^^^^^^^ expected `StructType<'_, Opaque>`, found `StructType<'_, BodySet>`
   |                   |
   |                   arguments to this method are incorrect
   |
   = note: expected struct `StructType<'_, Opaque, Brand<'_>>`
              found struct `StructType<'_, BodySet, Brand<'_>>`
note: method defined here
  --> src/module.rs
   |
   |     pub fn set_struct_body<I, T>(
   |            ^^^^^^^^^^^^^^^
